edited flexdashboard, added summary

--- a/berjees_knit_flex.html
+++ b/berjees_knit_flex.html
@@ -1962,20 +1962,55 @@ window.FlexDashboardComponents.push({
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
+<div id="statistics" class="section level1">
+<h1>STATISTICS</h1>
 <div id="chart-1" class="section level3">
 <h3>Chart 1</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<pre><code># A tibble: 4 × 2
-# Groups:   Do.you.understand.that.this.is.a.paid.course.. [4]
-  Do.you.understand.that.this.is.a.paid.course..     n
-  &lt;chr&gt;                                          &lt;int&gt;
-1 &quot;&quot;                                                14
-2 &quot;no&quot;                                              20
-3 &quot;No&quot;                                             120
-4 &quot;Yes&quot;                                             93</code></pre>
+<table>
+<thead>
+<tr>
+<th style="text-align:left;">
+Gender
+</th>
+<th style="text-align:right;">
+n
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Female
+</td>
+<td style="text-align:right;">
+56
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Male
+</td>
+<td style="text-align:right;">
+190
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Prefer not to say
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+</tbody>
+</table>
 </div>
+</div>
+<div id="page-3" class="section level1">
+<h1>PAGE 3</h1>
 <div id="row" class="section level2">
 <h2>Row</h2>
 <div id="chart-2" class="section level3">
@@ -1988,6 +2023,7 @@ window.FlexDashboardComponents.push({
 <h3>Chart 3</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
+</div>
 </div>
 </div>
 </div>
