--- a/qasimflexdashboard.html
+++ b/qasimflexdashboard.html
@@ -1973,27 +1973,21 @@ window.FlexDashboardComponents.push({
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<pre><code># A tibble: 6 × 29
-  Timestamp   Stude…¹ Do yo…² Cours…³ Date sen…⁴ Payment Payme…⁵ How a…⁶ Which…⁷
-  &lt;chr&gt;         &lt;dbl&gt; &lt;chr&gt;   &lt;chr&gt;   &lt;date&gt;     &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;  
-1 8/25/2022 …       1 Yes     Sent    2022-08-26 Paid    Yes     Throug… Pakist…
-2 8/22/2022 …       2 No      Sent    2022-08-23 Pending &lt;NA&gt;    Friend  Pakist…
-3 8/22/2022 …       3 No      Sent    2022-08-23 Pending &lt;NA&gt;    WhatsA… Pakist…
-4 8/22/2022 …       4 No      Sent    2022-08-23 Pending &lt;NA&gt;    Whatsa… Pakist…
-5 8/22/2022 …       5 Yes     Sent    2022-08-23 Maybe   &lt;NA&gt;    Throug… Pakist…
-6 8/22/2022 …       6 No      Sent    2022-08-23 Pending &lt;NA&gt;    WhatsA… Pakist…
-# … with 20 more variables: `Which City are you currently residing in?` &lt;chr&gt;,
-#   Gender &lt;chr&gt;, Age &lt;chr&gt;,
-#   `Are you currently attending University / College?` &lt;chr&gt;,
-#   `Latest Degree Completed or in Progress?` &lt;chr&gt;,
-#   `Name of University or College currently or previously attended?` &lt;chr&gt;,
-#   `Discipline of Degree?` &lt;chr&gt;,
-#   `Have you taken any foundational course in data science / econometrics / statistics / computer science?` &lt;chr&gt;, …</code></pre>
+<pre><code># A tibble: 3 × 2
+# Groups:   Gender [3]
+  Gender                n
+  &lt;chr&gt;             &lt;int&gt;
+1 Female               56
+2 Male                190
+3 Prefer not to say     1</code></pre>
 </div>
 <div id="column-1" class="section level2">
 <h2>Column</h2>
 <div id="chart-b" class="section level3">
 <h3>Chart B</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
