Added a page in my Flexdashboard

--- a/qasimflexdashboard.html
+++ b/qasimflexdashboard.html
@@ -1956,16 +1956,24 @@ window.FlexDashboardComponents.push({
 
 <div id="dashboard-container">
 
+<div id="page-1" class="section level1">
+<h1>Page 1</h1>
 <div id="column" class="section level2">
 <h2>Column</h2>
 <div id="chart-a" class="section level3">
 <h3>Chart A</h3>
 </div>
+<div id="chart-b" class="section level3">
+<h3>Chart B</h3>
+</div>
 </div>
 <div id="importing-data-from-csv" class="section level2">
 <h2>Importing Data from csv</h2>
+<div id="importing-data-from-csv-1" class="section level3">
+<h3>Importing Data from csv</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
+</div>
 </div>
 </div>
 <div id="summarize-the-data" class="section level2">
@@ -1983,16 +1991,16 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="column-1" class="section level2">
 <h2>Column</h2>
-<div id="chart-b" class="section level3">
-<h3>Chart B</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-</div>
 <div id="chart-c" class="section level3">
+<h3>Chart C</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+</div>
+<div id="chart-c-1" class="section level3">
 <h3>Chart C</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
@@ -2004,6 +2012,10 @@ window.FlexDashboardComponents.push({
 <div id="qasims-flexdashboard" class="section level3">
 <h3>Qasim’s Flexdashboard</h3>
 </div>
+</div>
+</div>
+<div id="page-2" class="section level1">
+<h1>Page 2</h1>
 </div>
 
 </div>
