--- a/moniza_EDA_coursedata.html
+++ b/moniza_EDA_coursedata.html
@@ -388,7 +388,9 @@ pre code {
 ## The following objects are masked from &#39;package:base&#39;:
 ## 
 ##     date, intersect, setdiff, union</code></pre>
-<pre class="r"><code>library(stringr)</code></pre>
+<pre class="r"><code>library(stringr)
+library(knitr)
+#library(KableExtra)</code></pre>
 </div>
 <div id="importing-data" class="section level1">
 <h1>Importing Data</h1>
